# Android-OCRLab

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/reviso/marcello_ocrlab/ocrlab/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/jpeg/: jconfigint.h
app/src/main/cpp/lept/: environ.h
app/src/main/cpp/lib1/: native-lib.cpp
app/src/main/cpp/native-lib/: native-lib-common.cpp  native-lib-common.h  native-lib-jpeg.cpp  native-lib-jpeg.h  native-lib-lept.cpp  native-lib-lept.h  native-lib-png.cpp  native-lib-png.h  native-lib-tesseract.cpp  native-lib-tesseract.h  native-lib-tiff.cpp  native-lib-tiff.h  native-lib.cpp
app/src/main/cpp/tesseract/: config_auto.h
app/src/main/cpp/tesseract/api/: baseapi.cpp  baseapi.h  tesseractmain.cpp
app/src/main/cpp/tiff/: tif_config.h  tif_getimage.c  tiffiop.h
app/src/main/java/com/reviso/marcello_ocrlab/ocrlab/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/reviso/marcello_ocrlab/ocrlab/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
